--- a/module-1/day-2-python-2/python-2.ipynb
+++ b/module-1/day-2-python-2/python-2.ipynb
@@ -29,10 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bento_box_dict = {'ingredient1': 'rice', 'ingredient2': 'unagi', 'ingredient3': 'miso soup'}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +55,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "group_lunch = [\n",
+    "    {'ingredient1': 'rice', 'ingredient2': 'unagi', 'ingredient3': 'miso soup'},\n",
+    "    {'ingredient1': 'seaweed', 'ingredient2': 'tempura', 'ingredient3': 'miso soup'},\n",
+    "    {'ingredient1': 'hamburger', 'ingredient2': 'french fries', 'ingredient3': 'milkshake'}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tempura'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_lunch[1]['ingredient2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = group_lunch[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ingredient1': 'seaweed',\n",
+       " 'ingredient2': 'tempura',\n",
+       " 'ingredient3': 'miso soup'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function dict.items>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list.items"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +146,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "group_lunch = [{'ingredient1':'apps','ingredient2':'mains','ingredient3':'salad','ingredient4': 'deserts'},\n",
+    "               {'ingredient1':'soup','ingredient2':'mains','ingredient3':'salad','ingredient4': 'drinks'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type({'a','d','b','c'})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,10 +200,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "group_lunch = [\n",
+    "    {'ingredient1': 'rice', 'ingredient2': 'unagi', 'ingredient3': 'miso soup'},\n",
+    "    {'ingredient1': 'seaweed', 'ingredient2': 'tempura', 'ingredient3': 'miso soup'},\n",
+    "    {'ingredient1': 'hamburger', 'ingredient2': 'french fries', 'ingredient3': 'milkshake'}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rice\n",
+      "---------------\n",
+      "seaweed\n",
+      "---------------\n",
+      "hamburger\n",
+      "---------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for order in group_lunch:\n",
+    "    print(order['ingredient1'])\n",
+    "    print('-'*15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +246,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order 1 contains rice\n",
+      "order 2 contains seaweed\n",
+      "order 3 contains hamburger\n"
+     ]
+    }
+   ],
+   "source": [
+    "count =0\n",
+    "for order in group_lunch:\n",
+    "    count += 1\n",
+    "    # .format() method\n",
+    "    sentence = 'Order {} contains {}, {}, and {}'.format(count,\n",
+    "                                                        order['ingredient1'],\n",
+    "                                                        order['ingredient2'],\n",
+    "                                                        order['ingredient3'],)\n",
+    "    # string concatenation method\n",
+    "    sentence = 'order ' + str(count) + ' contains ' + order['ingredient1']\n",
+    "    \n",
+    "    # order N contains x, y, and z\n",
+    "    print (sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order 1 contains rice, unagi, and miso soup\n",
+      "order 2 contains seaweed, tempura, and miso soup\n",
+      "order 3 contains hamburger, french fries, and milkshake\n"
+     ]
+    }
+   ],
+   "source": [
+    "count =0\n",
+    "for order in group_lunch:\n",
+    "    count += 1\n",
+    "\n",
+    "    #f-string method\n",
+    "    sentence = f\"order {count} contains {order['ingredient1']}, {order['ingredient2']}, and {order['ingredient3']}\"\n",
+    "    # do something\n",
+    "    # order N contains x, y, and z\n",
+    "    print (sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order 1 contains rice, unagi, and miso soup\n",
+      "Order 2 contains seaweed, tempura, and miso soup\n",
+      "Order 3 contains hamburger, french fries, and milkshake\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count, order in enumerate(group_lunch, start=1):\n",
+    "    # .format() method and enumerate\n",
+    "    sentence = 'Order {} contains {}, {}, and {}'.format(count,\n",
+    "                                                        order['ingredient1'],\n",
+    "                                                        order['ingredient2'],\n",
+    "                                                        order['ingredient3'],)\n",
+    "\n",
+    "    print (sentence)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +379,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "items = ['cheese', 'whole milk', 'kefir', 'tofu four-pack', 'kale', 'oranges', 'ham', \"ben & jerry's\"]\n",
+    "cost = [2.79, 3.42, 4.50, 12.00, 2.75, 3.64, 25.00, 5.29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cheese',\n",
+       " 'whole milk',\n",
+       " 'kefir',\n",
+       " 'tofu four-pack',\n",
+       " 'kale',\n",
+       " 'oranges',\n",
+       " 'ham',\n",
+       " \"ben & jerry's\"]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +428,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "('whole milk', 3.42)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-dbf9771ee6f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mshopping_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mshopping_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mshopping_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: ('whole milk', 3.42)"
+     ]
+    }
+   ],
+   "source": [
+    "shopping_list = {}\n",
+    "for i in [0,1,2,3,4,5,6,7]:\n",
+    "    shopping_list[items[1],cost[1]]\n",
+    "    \n",
+    "shopping_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('cheese', 2.79),\n",
+       " ('whole milk', 3.42),\n",
+       " ('kefir', 4.5),\n",
+       " ('tofu four-pack', 12.0),\n",
+       " ('kale', 2.75),\n",
+       " ('oranges', 3.64),\n",
+       " ('ham', 25.0),\n",
+       " (\"ben & jerry's\", 5.29)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(items, cost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 2.79,\n",
+       " 'whole milk': 3.42,\n",
+       " 'kefir': 4.5,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'kale': 2.75,\n",
+       " 'oranges': 3.64,\n",
+       " 'ham': 25.0,\n",
+       " \"ben & jerry's\": 5.29}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(items, cost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 2.79,\n",
+       " 'whole milk': 3.42,\n",
+       " 'kefir': 4.5,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'kale': 2.75,\n",
+       " 'oranges': 3.64,\n",
+       " 'ham': 25.0,\n",
+       " \"ben & jerry's\": 5.29}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_list = dict(zip(items, cost))\n",
+    "shopping_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Print out shopping list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- [ ] cheese; $2.79\n",
+      "- [ ] whole milk; $3.42\n",
+      "- [ ] kefir; $4.5\n",
+      "- [ ] tofu four-pack; $12.0\n",
+      "- [ ] kale; $2.75\n",
+      "- [ ] oranges; $3.64\n",
+      "- [ ] ham; $25.0\n",
+      "- [ ] ben & jerry's; $5.29\n",
+      "Total bill: $59.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in shopping_list.items():\n",
+    "    print(f'- [ ] {k}; ${v}')\n",
+    "    \n",
+    "print(f'Total bill: ${sum(shopping_list.values())}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,9 +600,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i < 6:\n",
@@ -245,9 +633,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "foo\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 6:\n",
@@ -269,9 +670,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "foo\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 6:\n",
@@ -297,10 +708,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- [ ] kale: $2.75\n",
+      "- [ ] kale: $2.75\n",
+      "- [ ] kale: $2.75\n",
+      "- [ ] kale: $2.75\n",
+      "Total bill: $22.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for items, cost in shopping_list.items():\n",
+    "    if total + cost > 25:\n",
+    "        break\n",
+    "    total += cost\n",
+    "    print(f'- [ ] {k}: ${v}')\n",
+    "print(f'Total bill: ${total}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- [ ] cheese: $2.79\n",
+      "- [ ] whole milk: $3.42\n",
+      "- [ ] kefir: $4.5\n",
+      "- [ ] tofu four-pack: $12.0\n",
+      "Total bill: $22.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for k, v in shopping_list.items():\n",
+    "    if total + v > 25:\n",
+    "        break\n",
+    "    total += v\n",
+    "    print(f'- [ ] {k}: ${v}')\n",
+    "print(f'Total bill: ${total}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -580,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
