--- a/module-1/day-3-python-3/python-2_Adebodun.ipynb
+++ b/module-1/day-3-python-3/python-2_Adebodun.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +313,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#truthy values vs Falsey values\n",
+    "#Falsey values:\n",
+    "#0\n",
+    "#''\n",
+    "#[]\n",
+    "#{}\n",
+    "#(,)\n",
+    "#0.0\n",
+    "#none\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,19 +356,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#truthy values vs Falsey values\n",
-    "#Falsey values:\n",
-    "#0\n",
-    "#''\n",
-    "#[]\n",
-    "#{}\n",
-    "#(,)\n",
-    "#0.0\n",
-    "#none\n"
+    "def sayHello():\n",
+    "    print(\"Hello!\")\n",
+    "    # this function has no arguement. This is not the right way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "sayHello()"
    ]
   },
   {
@@ -431,10 +459,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_one(number):\n",
+    "    return number + 1\n",
+    "\n",
+    "def times_five(number):\n",
+    "    return number * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_plus_one = add_one(1)\n",
+    "answer = times_five(number_plus_one)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#better way to do above\n",
+    "print(times_five(add_one(1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_sentence(word1, word2, word3=None, word4=None):\n",
+    "    my_sentence = f'My words are {word1} and {word2}.'\n",
+    "    if word3:\n",
+    "        my_sentence += f' I also haave {word3}.'\n",
+    "    if word4:\n",
+    "        my_sentence += f' My last word is {word4}.'\n",
+    "        \n",
+    "    return my_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My words are cat and dog. My last word is string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(make_sentence('cat','dog',word4='string'))\n",
+    "# cat, dog and string are the arguments for the new function i just created (make_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#you can also define multiple things in the same line"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -445,9 +559,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Groceries': {'ben & jerrys': 5.29,\n",
+       "  'cheese': 2.79,\n",
+       "  'ham': 25.0,\n",
+       "  'kale': 2.75,\n",
+       "  'kefir': 4.5,\n",
+       "  'oranges': 3.64,\n",
+       "  'tofu four-pack': 12.0,\n",
+       "  'whole milk': 3.42},\n",
+       " 'House supplies': {'toilet paper pack': 16.5,\n",
+       "  'clorox spray': 6.43,\n",
+       "  'kleenex': 2.5},\n",
+       " 'Pet supplies': {'Taste of the Wild': 65.2,\n",
+       "  'squeaky toy': 4.5,\n",
+       "  'duck feet': 8.45}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def print_shopping_dicts(s_dict):\n",
+    "    for category, cat_list in s_dict.items():\n",
+    "        print('-' * len(category)) # this prints the '-' sign-on the headers to make it look nicer\n",
+    "        print(category)  #this prints each category e.g., Groceries\n",
+    "        print('-' * len(category))\n",
+    "        for item, cost in cat_list.items(): #this line recognizes each items under each category.\n",
+    "            print(f'- [] {item}: ${cost}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-e548c4515e60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprint_shopping_dicts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 's_dict' is not defined"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -469,11 +643,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "samp_list = [1, 1, 1, 1, 2, 2, 2, 3, 3, 10, 44]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.363636363636363"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fast_average(samples):\n",
+    "    return sum(samples)/len(samples)\n",
+    "fast_average(samp_list)"
    ]
   },
   {
