--- a/module-1/day~10-sql-2/sql-lab.ipynb
+++ b/module-1/day~10-sql-2/sql-lab.ipynb
@@ -26,6 +26,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting MySQL-connector-python\n",
+      "  Downloading mysql_connector_python-8.0.20-cp37-cp37m-win_amd64.whl (4.3 MB)\n",
+      "Collecting protobuf>=3.0.0\n",
+      "  Downloading protobuf-3.12.2-cp37-cp37m-win_amd64.whl (1.0 MB)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from protobuf>=3.0.0->MySQL-connector-python) (1.14.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from protobuf>=3.0.0->MySQL-connector-python) (45.2.0.post20200210)\n",
+      "Installing collected packages: protobuf, MySQL-connector-python\n",
+      "Successfully installed MySQL-connector-python-8.0.20 protobuf-3.12.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install MySQL-connector-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import mysql.connector\n",
+    "\n",
+    "con = mysql.connector.connect(user='hbs-student', password='super-secure-password?',\n",
+    "                              host='hbs-ds-060120.c1doesqrid0e.us-east-1.rds.amazonaws.com',\n",
+    "                              database='classicmodels')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,10 +72,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'read_sql_querry'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-6b7d37bbc1b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m pd.read_sql_querry(\"\"\"\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mSELECT\u001b[0m \u001b[0mcontactLastName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mcontactFirstName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m          \u001b[0maddressLine1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m          \u001b[0maddressLine2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m    260\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0m_SparseArray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    261\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 262\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"module 'pandas' has no attribute '{name}'\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    263\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    264\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read_sql_querry'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_sql_querry(\"\"\"\n",
+    "SELECT contactLastName,\n",
+    "        contactFirstName,\n",
+    "         addressLine1,\n",
+    "         addressLine2,\n",
+    "         city,\n",
+    "         state,\n",
+    "         postalCode,\n",
+    "         country\n",
+    "FROM classicmodels.customers\n",
+    "WHERE salesRepEmployeeNumber IS NULL\n",
+    "order by 1;\n",
+    "\"\"\",con)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,7 +116,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "-- List the names of all customers that have a creditLimit between 100,000 and 200,000 inclusively. Order by customer name.\n",
+    "SELECT contactLastName,\n",
+    "\t\tcontactFirstName,\n",
+    "        addressLine1,\n",
+    "        addressLine2,\n",
+    "        city,\n",
+    "        state,\n",
+    "        postalCode,\n",
+    "        country,\n",
+    "        creditLimit\n",
+    "FROM classicmodels.customers\n",
+    "WHERE creditLimit BETWEEN 100000 AND 200000\n",
+    "order by contactlastName;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +145,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "-- List all employees who have the initials of M.P. or P.M., by name. Order by last name.\n",
+    "SELECT contactFirstName,\n",
+    "\t\tcontactLastName\n",
+    "FROM classicmodels.customers\n",
+    "WHERE (contactFirstName REGEXP '^[P].*$' and contactLastName REGEXP '^[M].*$') or (contactFirstName REGEXP '^[M].*$' and contactLastName REGEXP '^[P].*$');"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,7 +165,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "-- List all the products' productNames purchased by Mini Wheels Co. Order the list by product line.\n",
+    "SELECT productName, customerName, productLine\n",
+    "FROM customers\n",
+    "JOIN orders\n",
+    "USING(customerNumber)\n",
+    "JOIN orderdetails\n",
+    "USING(orderNumber)\n",
+    "JOIN products\n",
+    "USING(productCode)\n",
+    "JOIN productlines\n",
+    "USING(productLine)\n",
+    "WHERE customerName = 'Mini Wheels Co.'\n",
+    "ORDER BY productLine"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
