last friday commits

--- a/module-1/day~10-sql-2/sql-lab-morning-Copy1.ipynb
+++ b/module-1/day~10-sql-2/sql-lab-morning-Copy1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -399,25 +399,44 @@
        "21    8 Temasek         Singapore      None     038988     Singapore  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_sql_query(\"\"\"\n",
+    "-- List all customer names and their addresses who don't have a specified sales rep. Order by customer name. \n",
     "SELECT contactLastName,\n",
-    "        contactFirstName,\n",
-    "         addressLine1,\n",
-    "         addressLine2,\n",
-    "         city,\n",
-    "         state,\n",
-    "         postalCode,\n",
-    "         country\n",
+    "       contactFirstName,\n",
+    "       addressLine1,\n",
+    "       addressLine2,\n",
+    "       city,\n",
+    "       state,\n",
+    "       postalCode,\n",
+    "       country\n",
     "FROM classicmodels.customers\n",
     "WHERE salesRepEmployeeNumber IS NULL\n",
-    "order by 1;\n",
-    "\"\"\",con)"
+    "ORDER BY 1;\n",
+    "\"\"\", con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classicmodels.db\n",
+      "classmodels.sql\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls data\\"
    ]
   },
   {
@@ -432,21 +451,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "-- List the names of all customers that have a creditLimit between 100,000 and 200,000 inclusively. Order by customer name.\n",
-    "SELECT contactLastName,\n",
-    "\t\tcontactFirstName,\n",
-    "        addressLine1,\n",
-    "        addressLine2,\n",
-    "        city,\n",
-    "        state,\n",
-    "        postalCode,\n",
-    "        country,\n",
-    "        creditLimit\n",
-    "FROM classicmodels.customers\n",
-    "WHERE creditLimit BETWEEN 100000 AND 200000\n",
-    "order by contactlastName;"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -461,13 +466,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "-- List all employees who have the initials of M.P. or P.M., by name. Order by last name.\n",
-    "SELECT contactFirstName,\n",
-    "\t\tcontactLastName\n",
-    "FROM classicmodels.customers\n",
-    "WHERE (contactFirstName REGEXP '^[P].*$' and contactLastName REGEXP '^[M].*$') or (contactFirstName REGEXP '^[M].*$' and contactLastName REGEXP '^[P].*$');"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -481,21 +480,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "-- List all the products' productNames purchased by Mini Wheels Co. Order the list by product line.\n",
-    "SELECT productName, customerName, productLine\n",
-    "FROM customers\n",
-    "JOIN orders\n",
-    "USING(customerNumber)\n",
-    "JOIN orderdetails\n",
-    "USING(orderNumber)\n",
-    "JOIN products\n",
-    "USING(productCode)\n",
-    "JOIN productlines\n",
-    "USING(productLine)\n",
-    "WHERE customerName = 'Mini Wheels Co.'\n",
-    "ORDER BY productLine"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
