--- a/module-1/day~10-sql-2/sql-lab-answers.ipynb
+++ b/module-1/day~10-sql-2/sql-lab-answers.ipynb
@@ -27,21 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting mysql-connector-python\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3f/72/abf04bb96a3feaf79587daf158ad7ee1f88f202ff4e90b5e8c7f67f74556/mysql_connector_python-8.0.20-cp37-cp37m-macosx_10_14_x86_64.whl (4.8MB)\n",
-      "\u001b[K     |████████████████████████████████| 4.8MB 2.2MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /opt/anaconda3/lib/python3.7/site-packages (from mysql-connector-python) (3.11.3)\n",
-      "Requirement already satisfied: six>=1.9 in /opt/anaconda3/lib/python3.7/site-packages (from protobuf>=3.0.0->mysql-connector-python) (1.12.0)\n",
-      "Requirement already satisfied: setuptools in /opt/anaconda3/lib/python3.7/site-packages (from protobuf>=3.0.0->mysql-connector-python) (41.4.0)\n",
-      "Installing collected packages: mysql-connector-python\n",
-      "Successfully installed mysql-connector-python-8.0.20\n"
+      "Requirement already satisfied: mysql-connector-python in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (8.0.20)\n",
+      "Requirement already satisfied: protobuf>=3.0.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mysql-connector-python) (3.12.2)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from protobuf>=3.0.0->mysql-connector-python) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from protobuf>=3.0.0->mysql-connector-python) (1.14.0)\n"
      ]
     }
    ],
@@ -2238,7 +2234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
