--- a/module-3/day-9-boosting/boosting.ipynb
+++ b/module-3/day-9-boosting/boosting.ipynb
@@ -41,16 +41,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting category_encoders\n",
+      "  Downloading category_encoders-2.2.2-py2.py3-none-any.whl (80 kB)\n",
+      "Requirement already satisfied: patsy>=0.5.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (0.5.1)\n",
+      "Requirement already satisfied: scipy>=1.0.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (1.4.1)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (1.18.1)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (0.23.1)\n",
+      "Requirement already satisfied: pandas>=0.21.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (1.0.1)\n",
+      "Requirement already satisfied: statsmodels>=0.9.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from category_encoders) (0.11.0)\n",
+      "Requirement already satisfied: six in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from patsy>=0.5.1->category_encoders) (1.14.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from scikit-learn>=0.20.0->category_encoders) (0.14.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from scikit-learn>=0.20.0->category_encoders) (2.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from pandas>=0.21.1->category_encoders) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from pandas>=0.21.1->category_encoders) (2019.3)\n",
+      "Installing collected packages: category-encoders\n",
+      "Successfully installed category-encoders-2.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install category_encoders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mlxtend\n",
+      "  Downloading mlxtend-0.17.2-py2.py3-none-any.whl (1.3 MB)\n",
+      "Requirement already satisfied: pandas>=0.24.2 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (1.0.1)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.3 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (0.23.1)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: matplotlib>=3.0.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (3.1.3)\n",
+      "Requirement already satisfied: scipy>=1.2.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (1.4.1)\n",
+      "Requirement already satisfied: joblib>=0.13.2 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (0.14.1)\n",
+      "Requirement already satisfied: numpy>=1.16.2 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from mlxtend) (1.18.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from pandas>=0.24.2->mlxtend) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from pandas>=0.24.2->mlxtend) (2019.3)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from scikit-learn>=0.20.3->mlxtend) (2.1.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (1.1.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (2.4.6)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from matplotlib>=3.0.0->mlxtend) (0.10.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\adebodun aina\\anaconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas>=0.24.2->mlxtend) (1.14.0)\n",
+      "Installing collected packages: mlxtend\n",
+      "Successfully installed mlxtend-0.17.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mlxtend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
